<resources>
    <string name="app_name">Squeezelite</string>
    <string name="start_player">Start player</string>
    <string name="stop_player">Stop player</string>
    <string name="player_started">Player started</string>
    <string name="player_stopped">Player stopped</string>
    <string name="main_notification">Player</string>
    <string name="no_servers">No servers found</string>
    <string name="server_changed">Server changed</string>
    <string name="server_discovered">Server discovered</string>
    <string name="no_new_server">No new server found</string>
    <string name="blank_server">Nothing configured, server will be discovered when player starts.</string>
    <string name="discovering_server">Discovering server</string>
    <string name="settings">Settings</string>
    <string name="server_settings">Server</string>
    <string name="player_settings">Player</string>
    <string name="server_address">Host name or IP address</string>
    <string name="discover">Tap here to discover server</string>
    <string name="discover_summary">Attempt to auto-locate Lyrion server.</string>
    <string name="player_name">Name</string>
    <string name="behaviour_settings">Behaviour</string>
    <string name="start_service">Start player when launched</string>
    <string name="start_service_summary">"When starting from Android launcher then just start player, and don't show this UI."</string>
    <string name="use_wake_lock">Keep device awake</string>
    <string name="use_wake_lock_summary">Keep device awake whilst player is active. NOTE: This will increase battery usage.</string>
    <string name="restore_volume">Restore volume</string>
    <string name="restore_volume_summary">"Restore device's 'Music' volume when starting."</string>
    <string name="volume_control">Volume control</string>
    <string name="volume_control_separate">Lyrion player and Android device can have separate volume settings.</string>
    <string name="volume_control_device">"Lyrion player's volume is locked to 100%% and volume changes need to be made on Android device."</string>
    <string name="volume_control_synchronized">Volume shown in Lyrion is synchronized with Android device. Changing one volume setting will change the other.</string>
    <string name="max_bitrate">Bitrate limit</string>
    <string name="stream_buffer">Buffer size</string>
    <string name="initial_connection_timeout">Initial connection timeout</string>
    <string name="connection_lost_timeout">Player stop timeout when server connection lost</string>
    <string name="start_on_boot">Start on boot</string>
    <string name="start_on_boot_summary">Automatically start player when device is restarted.</string>
    <string name="start_on_boot_delay">Delay when starting on boot</string>
    <string name="max_bitrate_when">Apply bit rate limit</string>
    <string name="bt">Bluetooth</string>
    <string name="autostart_bt">Start player on connect</string>
    <string name="autostart_bt_summary">When one of the configured BT devices connects then start player using its ID and name. Player will also stop when device disconnects.</string>
    <string name="autostop_bt">Stop player on disconnect</string>
    <string name="autostop_bt_summary">When any BT audio device disconnects then stop player. This is independent of the auto start above.</string>
    <string name="bt_mac_addresses">Auto start when device connects</string>
    <string name="autostart_android_auto">Start player when Android Auto connects</string>
    <string name="autostart_android_auto_summary">Android Auto does not use Bluetooth for audio, but the car still connects as a hands-free (calls) device when Android Auto starts. Start player when one of the devices configured above connects in this way, and stop it when the Android Auto session ends. Add the car to the list above.</string>
    <string name="send_track_details">Send track details</string>
    <string name="send_track_details_summary">Send details of the track being played (title, artist, album, artwork) to the connected device, so that it can display these. Also used for the lock screen and Android Auto.</string>
    <string name="use_bt_id">Use ID and name</string>
    <string name="use_bt_id_summary">Use name and ID of connected device as name and ID on Lyrion server.</string>
    <string name="none">None</string>
    <string name="stop_on_power_off">Stop on power off</string>
    <string name="stop_on_power_off_summary">"Stop player application when it's powered off via Lyrion."</string>
    <string name="use_opensles">Force older output method</string>
    <string name="use_opensles_summary">Always use OpenSL ES for audio output.</string>
    <string name="audio_focus">Use audio focus</string>
    <string name="audio_focus_summary">Take Android audio focus whilst playing, and pause when another app (e.g. a phone call) takes it. Required for sound to be sent to Android Auto.</string>
</resources>
