<!--
/*
 *  Squeezelite Android
 *
 *  (c) Craig Drummond 2025-2026 <craig.p.drummond@gmail.com>
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *
 */
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/server_settings">
        <Preference
            app:iconSpaceReserved="false"
            app:key="server"
            app:summary="@string/no_servers"
            app:title="@string/server_address"
            app:singleLineTitle="false"/>
        <Preference
            app:iconSpaceReserved="false"
            app:key="discover"
            app:summary="@string/discover_summary"
            app:title="@string/discover"
            app:singleLineTitle="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/player_settings">
        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="player_name"
            app:summary=""
            app:title="@string/player_name"
            app:singleLineTitle="false"/>
        <ListPreference
            android:entries="@array/volume"
            android:entryValues="@array/volumeAlias"
            android:key="volume_control"
            android:title="@string/volume_control"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false"/>
        <ListPreference
            android:entries="@array/bitrate"
            android:entryValues="@array/bitrateAlias"
            android:key="max_bitrate"
            android:title="@string/max_bitrate"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false"/>
        <ListPreference
            android:entries="@array/rateLimitWhen"
            android:entryValues="@array/rateLimitWhenAlias"
            android:key="max_bitrate_when"
            android:title="@string/max_bitrate_when"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false"/>
        <ListPreference
            android:entries="@array/buffer"
            android:entryValues="@array/bufferAlias"
            android:key="stream_buffer"
            android:title="@string/stream_buffer"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/behaviour_settings">
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="start_service"
            app:summary="@string/start_service_summary"
            app:title="@string/start_service"
            app:singleLineTitle="false"/>
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="restore_volume"
            app:summary="@string/restore_volume_summary"
            app:title="@string/restore_volume"
            app:singleLineTitle="false"/>
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="stop_on_power_off"
            app:summary="@string/stop_on_power_off_summary"
            app:title="@string/stop_on_power_off"
            app:singleLineTitle="false"/>
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="use_wake_lock"
            app:summary="@string/use_wake_lock_summary"
            app:title="@string/use_wake_lock"
            app:singleLineTitle="false"/>
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="start_on_boot"
            app:summary="@string/start_on_boot_summary"
            app:title="@string/start_on_boot"
            app:singleLineTitle="false"/>
        <ListPreference
            android:entries="@array/delay"
            android:entryValues="@array/delayAlias"
            android:key="start_on_boot_delay"
            android:title="@string/start_on_boot_delay"
            app:singleLineTitle="false"
            android:singleLineTitle="false"
            app:iconSpaceReserved="false" />
        <ListPreference
            android:entries="@array/duration"
            android:entryValues="@array/durationAlias"
            android:key="initial_connection_timeout"
            android:title="@string/initial_connection_timeout"
            app:singleLineTitle="false"
            android:singleLineTitle="false"
            app:iconSpaceReserved="false" />
        <ListPreference
            android:entries="@array/duration"
            android:entryValues="@array/durationAlias"
            android:key="connection_lost_timeout"
            android:title="@string/connection_lost_timeout"
            app:singleLineTitle="false"
            android:singleLineTitle="false"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/bt">
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="use_bt_id"
            app:summary="@string/use_bt_id_summary"
            app:title="@string/use_bt_id"
            app:singleLineTitle="false"/>
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="send_track_details"
            app:summary="@string/send_track_details_summary"
            app:title="@string/send_track_details"
            app:singleLineTitle="false"/>
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="autostart_bt"
            app:summary="@string/autostart_bt_summary"
            app:title="@string/autostart_bt"
            app:singleLineTitle="false"/>
        <MultiSelectListPreference
            android:key="bt_mac_addresses"
            android:title="@string/bt_mac_addresses"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false"
            android:singleLineTitle="false"/>
    </PreferenceCategory>

</PreferenceScreen>
